--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
     <script src="./js/model-dicts.js"></script>
     <script src="./js/model.js"></script>
 
-    <script src="./js/zoox.js"></script> -->
-    <script src="./js/index-min.js"></script>
-
+    <script src="./js/zoox.js"></script>
+    
     <script src="./js/ctrl-main.js"></script>
     <script src="./js/ctrl-sett.js"></script>
-    <script src="./js/ctrl-dict.js"></script>
+    <script src="./js/ctrl-dict.js"></script> -->
+    
+    <script src="./index-min.js"></script>
 
     <script>
         'use strict';
