--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <meta charset="utf-8">
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    
     <title>Words training</title>
 
     <link rel="manifest" href="manifest.webmanifest">
@@ -50,7 +51,7 @@
     <script src="./js/ctrl-main.js"></script>
     <script src="./js/ctrl-sett.js"></script>
     <script src="./js/ctrl-dict.js"></script> -->
-    
+
     <script src="./index-min.js"></script>
 
     <script>
