Bigger buttons padding

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     - Восстановить: Добавить возможность выбора словарей
     - Восстановить: Закрытие перевода при клике по нему 
     - Восстановить: Добавить закачку исторических данных
+    - Дизайн, PWA: Исправить голос озвучки для PWA
     - Дизайн: Для светлой темы (или для обоих тем) сделать цвет шарика и слова немного темнее?
     - Дизайн: Заменить кнопки на строки меню
 -->
@@ -24,7 +25,7 @@
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    
+
     <title>Words training</title>
 
     <link rel="manifest" href="manifest.webmanifest">
@@ -37,7 +38,7 @@
         window.global = {};
     </script>
 
-    <!-- <script src="./js/model-utils.js"></script>
+    <script src="./js/model-utils.js"></script>
     <script src="./js/model-sett.js"></script>
     <script src="./js/model-state.js"></script>
     <script src="./js/model-selected.js"></script>
@@ -47,12 +48,10 @@
     <script src="./js/model.js"></script>
 
     <script src="./js/zoox.js"></script>
-    
+
     <script src="./js/ctrl-main.js"></script>
     <script src="./js/ctrl-sett.js"></script>
-    <script src="./js/ctrl-dict.js"></script> -->
-
-    <script src="./index-min.js"></script>
+    <script src="./js/ctrl-dict.js"></script>
 
     <script>
         'use strict';
